input for frequency and send button
send frequency to change the tone of the pd patch

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <body>
         <div id="button_on" class="button">ON</div>
         <div id="button_off" class="button">OFF</div>
+		<input id="input" type="number"/>
+        <button id="button_send" type="button">Send</button>
+		
     </body>
     
 </html>
