--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <script type="text/javascript" src="js/jquery.js"> </script> 
         <script type="text/javascript" src="js/webpd-latest.js"> </script> 
         <script type="text/javascript" src="index.js"> </script> 
-        <script type="text/javascript" src="../vector.js"> </script> 
+        <script type="text/javascript" src="js/vector.js"> </script> 
     </head>
     
     <body>
