--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>steering behavior</title>
+        <title>Projekt Fliege</title>
         <meta charset ="UTF-8">
         <link rel="stylesheet" type="text/css" href="css.css"/> 
         <script type="text/javascript" src="js/jquery.js"> </script> 
